# lmms

./: .travis.yml  .travis.yml.legacy  CMakeLists.txt
.github/workflows/: build.yml
.travis/: linux..before_install.sh  linux..install.sh  scan_script.sh
cmake/linux/: package_linux.sh.in
data/locale/: en.ts
include/: AutoSave.h  SetupDialog.h  SubWindow.h
plugins/MidiExport/: CMakeLists.txt  midiWriter.cpp
plugins/MidiImport/: MidiImport.cpp
src/: CMakeLists.txt
src/core/: AutoSave.cpp  CMakeLists.txt
src/gui/: SetupDialog.cpp  SubWindow.cpp
